# spider_ros2

src/spider_MCU/: CMakeLists.txt  package.xml
src/spider_MCU/include/: CommanQueue.hpp  McuNode.hpp  ProtocalParser.hpp  SerialManager.hpp  StateCache.hpp
src/spider_MCU/include/spider_MCU/: CommandQueue.hpp  McuNode.hpp  StateCache.hpp
src/spider_MCU/launch/: mcu.launch.py
src/spider_MCU/src/: CommandQueue.cpp  McuNode.cpp  ProtocolParser.cpp  SerialManager.cpp  StateCache.cpp  main.cpp
src/spider_mcu/: CMakeLists.txt  README.md  package.xml
src/spider_mcu/config/: mcu.yaml
src/spider_mcu/include/spider_mcu/: McuNode.hpp  ProtocolParser.hpp  SerialManager.hpp
src/spider_mcu/launch/: mcu.launch.py
src/spider_mcu/src/: CommandQueue.cpp  McuNode.cpp  ProtocolParser.cpp  SerialManager.cpp  StateCache.cpp  main.cpp
src/transformer_bringup/launch/: transformer_bringup.launch.py
src/transformer_controller/: CMakeLists.txt
src/transformer_controller/include/transformer_controller/: transformer_controller_node.hpp
src/transformer_controller/launch/: transformer_controller.launch.py
src/transformer_controller/src/: transformer_controller_node.cpp
src/transformer_hw_servos/config/: servos.yaml
src/transformer_hw_servos/include/transformer_hw_servos/: servo_backend.hpp  servo_controller_node.hpp
src/transformer_hw_servos/src/: servos_node.cpp
src/transformer_hw_servos/src/backends/: lgpio_backend.cpp  pca9685_backend.cpp
src/transformer_msp_bridge/src/: msp_builders.cpp  msp_parser.cpp  transformer_msp_bridge_node_decoders.cpp  transformer_msp_bridge_node_publishers.cpp
